w17 23.11.2016 08:18:32 +0300 - build 4851

1. Fix 2643 -- пропадание текста в просмотре.

drkns 23.11.2016 02:44:51 +0200 - build 4850

1. Некорректно отображался hex-просмотр.

drkns 22.11.2016 03:33:12 +0200 - build 4849

1. Продолжим начатое в 4848:
   - обновляем по таймауту, как везде
   - из поиска частично удалены остатки былой роскоши (но не все)
   - мелкие правки в смежных модулях.

zg 21.11.2016 20:27:54 +0200 - build 4848

1. диалог с результатами поиска теперь обновляется из главного потока. вся синхронизация в диалогах и меню убрана.

drkns 21.11.2016 10:20:02 +0200 - build 4847

1. Ещё одно уточнение 4834.

2. Рефакторинг.

w17 20.11.2016 15:40:36 +0300 - build 4846

1. Fix 2201.

drkns 19.11.2016 14:44:48 +0200 - build 4845

1. После 4834 криво работало меню ассоциаций.

2. Пара мелочей.

drkns 18.11.2016 20:16:18 +0200 - build 4844

1. Ещё пара уточнений 4834.

drkns 18.11.2016 17:53:42 +0200 - build 4843

1. Уточнение выравнивания строк по правому краю в элементах интерфейса.

2. Coverity warnings.

3. Рефакторинг.

zg 17.11.2016 11:48:08 +0200 - build 4842

1. 0003352: CtrlC сбрасывает состояние "неизменённый текст".

zg 16.11.2016 14:48:22 +0200 - build 4841

1. таскание диалога мышью и клавиатурой разделены.

svs 15.11.2016 11:18:33 +0300 - build

1. Добавка в файлы Помоши про команды "far:config" и "far:about"

drkns 15.11.2016 07:32:16 +0200 - build 4840

1. Убран workaround, добавленный в 4835 - исправлено в библиотеке.

zg 13.11.2016 23:24:26 +0200 - build 4839

1. уточнение 4838 для меню.

zg 13.11.2016 20:44:50 +0200 - build 4838

1. убран прямой опрос ввода при перетаскивании диалога.

drkns 13.11.2016 18:38:58 +0200 - build 4837

1. Уточнение 4834.

drkns 13.11.2016 14:47:30 +0200 - build 4836

1. 0003348: Far(build 4834) Trap on show folder/file attribute dialog

drkns 13.11.2016 14:17:47 +0200 - build 4835

1. gcc версия не запускалась в пещерных ОС.

drkns 12.11.2016 13:07:03 +0200 - build 4834
