@@ -1,3 +1,7 @@
+drkns 23.11.2016 23:32:50 +0200 - build 4852
+
+1. С форума: падало при постоянных блоках и выделенном блоке от почти начала строки до ее конца и нажатии Enter в начале строки
+
 w17 23.11.2016 08:18:32 +0300 - build 4851
 
 1. Fix 2643 -- пропадание текста в просмотре.
